# python-polylith-example-uv

./: .gitignore  README.md  pyproject.toml  workspace.toml
components/example/dictionaries/: core.py
components/example/greeting/: core.py
components/example/kafka/: consumer.py
projects/consumer_project/: pyproject.toml
projects/message_fastapi_project/: Dockerfile  README.md  pyproject.toml
projects/my_aws_lambda_project/: package-lock.json  pyproject.toml
projects/my_fastapi_project/: Dockerfile  README.md  pyproject.toml
projects/my_gcp_function_project/: Makefile  pyproject.toml
