[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "message_fastapi_project"
version = "0.1.0"
description = 'A Python Polylith example code repo'
authors = [{ name = "David Vujic" }]

requires-python = ">=3.12"

dependencies = [
  "fastapi~=0.116.1",
  "uvicorn~=0.35.0",
  "sqlalchemy~=2.0.43",
  "confluent-kafka~=2.11.0",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["example"]

[tool.polylith.bricks]
"../../bases/example/message_api" = "example/message_api"
"../../components/example/database" = "example/database"
"../../components/example/dictionaries" = "example/dictionaries"
"../../components/example/log" = "example/log"
"../../components/example/message" = "example/message"
"../../components/example/kafka" = "example/kafka"
"../../components/example/schema" = "example/schema"
