[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "my_gcp_function_project"
version = "0.1.0"
description = 'A Python Polylith example code repo'
authors = [{ name = "David Vujic" }]

requires-python = ">=3.12"

dependencies = [
  "functions-framework~=3.9.2",
]

[tool.hatch.build.force-include]
"main.py" = "main.py" # added by the build process
"requirements.txt" = "requirements.txt" # added by the build process

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["example"]

[tool.polylith.bricks]
"../../bases/example/greet_gcp_function" = "example/greet_gcp_function"
"../../components/example/greeting" = "example/greeting"
"../../components/example/log" = "example/log"
